db scheme id string to int
